<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="0dp">

    <TextView
        android:id="@+id/textView"
        style="@style/ActionItem"
        android:layout_marginTop="8dp"
        android:text="@string/steps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/textView2"
        style="@style/ActionItem"
        android:text="@string/step1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"></com.github.barteksc.pdfviewer.PDFView>
 -->
    <TextView
        android:id="@+id/textView3"
        style="@style/ActionItem"
        android:text="@string/step2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        style="@style/ActionItem"
        android:text="@string/step3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        style="@style/ActionItem"
        android:text="@string/step4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <Button
        android:id="@+id/img_btn_camera"
        style="@style/ActionItem"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="282dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
        android:gravity="center"
        android:text="Try On"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>